kubernetes/oke/apps/crunchy-pgo/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.mafyuh.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oke-cluster-pgadmin
  namespace: databases
spec:
  hostnames: ["pgadmin.matt.fo"]
  parentRefs:
    - name: envoy-external
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: oke-cluster-pgadmin
          port: 5050
